@@ -20,9 +20,7 @@ import com.databricks.jdbc.model.client.thrift.generated.*;
 import com.databricks.jdbc.model.core.ExternalLink;
 import com.databricks.sdk.service.sql.StatementState;
 import java.sql.SQLException;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
+import java.util.*;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
@@ -224,7 +222,9 @@ public class DatabricksThriftServiceClientTest {
             .setStatus(new TStatus().setStatusCode(TStatusCode.SUCCESS_STATUS))
             .setResults(resultData)
             .setResultSetMetadata(resultMetadataData);
-    when(resultData.getColumns()).thenReturn(Collections.emptyList());
+    TColumn tColumn = new TColumn();
+    tColumn.setStringVal(new TStringColumn().setValues(Collections.singletonList("")));
+    when(resultData.getColumns()).thenReturn(List.of(tColumn, tColumn, tColumn, tColumn));
     when(thriftAccessor.getThriftResponse(request, CommandName.LIST_TABLES, null))
         .thenReturn(response);
     DatabricksResultSet resultSet =
@@ -249,7 +249,7 @@ public class DatabricksThriftServiceClientTest {
             .setStatus(new TStatus().setStatusCode(TStatusCode.SUCCESS_STATUS))
             .setResults(resultData)
             .setResultSetMetadata(resultMetadataData);
-    when(resultData.getColumns()).thenReturn(Collections.emptyList());
+    when(resultData.getColumns()).thenReturn(new ArrayList<>());
     when(thriftAccessor.getThriftResponse(request, CommandName.LIST_COLUMNS, null))
         .thenReturn(response);
     DatabricksResultSet resultSet =
